--- a/index.html
+++ b/index.html
@@ -132,26 +132,26 @@
           <h1 class="brandTitle">Branding for small business</h1>
           <p>We can take care of your social media or help with organising and editing graphic content for your web presence. </p>
 
-          <div class="row insta">
-            <div class="col col-lg-4 m-auto">
+          <div class="row insta w-100">
+            <div class="col col-lg-4 col-md-12">
               <iframe src="https://www.instagram.com/p/B9KW0TLF682/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
             </div>
-            <div class="col col-lg-4 m-auto">
+            <div class="col col-lg-4 col-md-12">
               <iframe src="https://www.instagram.com/p/B9KWgUUlB5A/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
             </div>
-            <div class="col col-lg-4 m-auto">
+            <div class="col col-lg-4 col-md-12">
               <iframe src="https://www.instagram.com/p/B9KWISblPgQ/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
             </div>
           </div>
 
         <div class="row insta">
-          <div class="col col-lg-4 m-auto">
+          <div class="col col-lg-4 col-md-12">
             <iframe src="https://www.instagram.com/p/Bw5WMWyhANB/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 m-auto">
+          <div class="col col-lg-4 col-md-12">
             <iframe src="https://www.instagram.com/p/Bw5WNzaBPxX/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 m-auto">
+          <div class="col col-lg-4 col-md-12">
             <iframe src="https://www.instagram.com/p/Bw5WPU-BYBE/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
@@ -195,7 +195,7 @@
                         <div class="carousel-item active">
                             <div class="d-block">
                               <!-- embed-responsive embed-responsive-16by9 -->
-                              <img class="cara" src="Images/colorVid.png" alt="vid">
+                              <img class="cara" src="images/colorVid.png" alt="vid">
                               <!-- <script src="https://player.vimeo.com/api/player.js"></script>
                                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/394649687" allowfullscreen></iframe> -->
                             </div>
@@ -212,7 +212,7 @@
                           </div> -->
                           <div class="d-block">
                             <!-- embed-responsive embed-responsive-16by9 -->
-                            <img class="cara" src="Images/colorVid.png" alt="vid">
+                            <img class="cara" src="images/colorVid.png" alt="vid">
                             <!-- <script src="https://player.vimeo.com/api/player.js"></script>
                               <iframe class="embed-responsive-item" src="https://player.vimeo.com/394649687" allowfullscreen></iframe> -->
                           </div>
@@ -229,7 +229,7 @@
                           </div> -->
                           <div class="d-block">
                             <!-- embed-responsive embed-responsive-16by9 -->
-                            <img class="cara" src="Images/vidvid.png" alt="vid">
+                            <img class="cara" src="images/vidvid.png" alt="vid">
                             <!-- <script src="https://player.vimeo.com/api/player.js"></script>
                               <iframe class="embed-responsive-item" src="https://player.vimeo.com/394649687" allowfullscreen></iframe> -->
                           </div>
@@ -246,7 +246,7 @@
                           </div> -->
                           <div class="d-block">
                             <!-- embed-responsive embed-responsive-16by9 -->
-                            <img class="cara" src="Images/screenshot.png" alt="vid">
+                            <img class="cara" src="images/Screenshot.png" alt="vid">
                             <!-- <script src="https://player.vimeo.com/api/player.js"></script>
                               <iframe class="embed-responsive-item" src="https://player.vimeo.com/394649687" allowfullscreen></iframe> -->
                           </div>
