--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <!-- nav -->
-  <div id="navbar">
+  <div id="navbar" class="container-fluid">
     <nav class="navbar navbar-dark">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -60,7 +60,7 @@
 
   <!-- lander -->
   <section id="lander">
-    <div class="container-fluid landerDivvy w-100 lazy" data-loader="customLoaderName">
+    <div class="container-fluid landerDivvy w-100 lazy mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="col-lg-12 text-left">
@@ -88,7 +88,7 @@
   <!-- Photography -->
 
   <section id="photography">
-    <div class="container-fluid photoDi w-100 lazy" data-loader="customLoaderName">
+    <div class="container-fluid photoDi w-100 lazy mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="text-left">
@@ -125,7 +125,7 @@
   <!-- branding  -->
 
   <section id="brands">
-    <div class="container-fluid brandDi text-center">
+    <div class="container-fluid brandDi text-center mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
       <h1 class="brandTitle">BRANDING FOR YOUR BUSINESS</h1>
       <p>WE CAN TAKE CARE OF YOUR SOCIAL MEDIA CONTENT OR HELP WITH ORGANISING AND EDITING GRAPHIC CONTENT TO BUILD YOUR BRAND.</p>
@@ -135,25 +135,25 @@
 
 
         <div class="row insta w-100 lazy">
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/B9KW0TLF682/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/B9KWgUUlB5A/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/B9KWISblPgQ/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
 
         <div class="row insta lazy">
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WMWyhANB/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WNzaBPxX/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-12 text-center">
+          <div class="col col-lg-4 col-md-6text-center">
             <iframe src="https://www.instagram.com/p/Bw5WPU-BYBE/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
@@ -164,7 +164,7 @@
   <!-- videography -->
 
   <section id="videography">
-    <div class="container-fluid landerDi w-100 text-center lazy" data-loader="customLoaderName">
+    <div class="container-fluid landerDi w-100 text-center lazy mobilePad">
 
       <!-- Title and description row -->
       <div class="row">
@@ -280,7 +280,7 @@
   <!-- Contact us -->
 
   <section id="contact">
-    <div class="container-fluid brandDi w-100">
+    <div class="container-fluid brandDi w-100 mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
       <div class="row">
 
