--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 
-        <div class="row insta w-100 lazy">
+        <div class="row insta lazy">
           <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/B9KW0TLF682/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
@@ -153,7 +153,7 @@
           <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WNzaBPxX/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-6text-center">
+          <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WPU-BYBE/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
