--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- lander -->
   <section id="lander">
-    <div class="container-fluid landerDivvy w-100 lazy mobilePad">
+    <div class="container-fluid landerDivvy lazy mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="col-lg-12 text-left">
@@ -88,7 +88,7 @@
   <!-- Photography -->
 
   <section id="photography">
-    <div class="container-fluid photoDi w-100 lazy mobilePad">
+    <div class="container-fluid photoDi lazy mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="text-left">
@@ -96,13 +96,13 @@
         <h1 class="photoTitle">PHOTOGRAPHY</h1>
 
         <div class="row">
-          <div class="col col-lg-6">
+          <div class="col col-lg-6 col-md-12">
             <p>PORTRAITS</p>
             <p>BRAND CONTENT</p>
             <p>IMAGE EDITING</p>
           </div>
 
-          <div class="col col-lg-6 text-center">
+          <div class="col col-lg-6 col-md-12 text-center">
             <a href="https://www.instagram.com/roughedges_visuals/"><i class="botty fab fa-instagram"></i></a>
 
           </div>
@@ -164,7 +164,7 @@
   <!-- videography -->
 
   <section id="videography">
-    <div class="container-fluid landerDi w-100 text-center lazy mobilePad">
+    <div class="container-fluid landerDi text-center lazy mobilePad">
 
       <!-- Title and description row -->
       <div class="row">
@@ -280,7 +280,7 @@
   <!-- Contact us -->
 
   <section id="contact">
-    <div class="container-fluid brandDi w-100 mobilePad">
+    <div class="container-fluid brandDi mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
       <div class="row">
 
