--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <!-- nav -->
-  <div id="navbar" class="container-fluid">
+  <div id="navbar">
     <nav class="navbar navbar-dark">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -60,7 +60,7 @@
 
   <!-- lander -->
   <section id="lander">
-    <div class="container-fluid landerDivvy lazy mobilePad">
+    <div class="container-fluid landerDivvy lazy"><span class="mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="col-lg-12 text-left">
@@ -77,7 +77,7 @@
 
 
 
-      </div>
+      </span></div>
 
 
     </div>
@@ -88,7 +88,7 @@
   <!-- Photography -->
 
   <section id="photography">
-    <div class="container-fluid photoDi lazy mobilePad">
+    <div class="container-fluid photoDi lazy"> <span class="mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
 
       <div class="text-left">
@@ -118,14 +118,14 @@
       </div>
 
 
-    </div>
+    </span></div>
 
   </section>
 
   <!-- branding  -->
 
   <section id="brands">
-    <div class="container-fluid brandDi text-center mobilePad">
+    <div class="container-fluid brandDi text-center"><span class="mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
       <h1 class="brandTitle">BRANDING FOR YOUR BUSINESS</h1>
       <p>WE CAN TAKE CARE OF YOUR SOCIAL MEDIA CONTENT OR HELP WITH ORGANISING AND EDITING GRAPHIC CONTENT TO BUILD YOUR BRAND.</p>
@@ -158,13 +158,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </span></div>
   </section>
 
   <!-- videography -->
 
   <section id="videography">
-    <div class="container-fluid landerDi text-center lazy mobilePad">
+    <div class="container-fluid landerDi text-center lazy"><span class="mobilePad">
 
       <!-- Title and description row -->
       <div class="row">
@@ -273,14 +273,14 @@
         </div>
       </div>
       <!-- End carousel row -->
-    </div>
+  </span></div>
 
   </section>
 
   <!-- Contact us -->
 
   <section id="contact">
-    <div class="container-fluid brandDi mobilePad">
+    <div class="container-fluid brandDi"><span class=" mobilePad">
       <!-- <img  class="landerBkg" src="Images/Sky7.jpg" alt=""> -->
       <div class="row">
 
@@ -304,7 +304,7 @@
         </div>
       </div>
 
-    </div>
+    </span></div>
 
   </section>
 
