--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/B9KWgUUlB5A/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-6 text-center">
+          <div class="col col-lg-4 col-md-6 col-sm-12 text-center">
             <iframe src="https://www.instagram.com/p/B9KWISblPgQ/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
@@ -153,7 +153,7 @@
           <div class="col col-lg-4 col-md-6 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WNzaBPxX/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
-          <div class="col col-lg-4 col-md-6 text-center">
+          <div class="col col-lg-4 col-md-6 col-sm-12 text-center">
             <iframe src="https://www.instagram.com/p/Bw5WPU-BYBE/embed" width="300" height="250" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
